--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elevator",
-  "version": "2.2.1A",
+  "version": "2.2.1-A",
   "description": "Windows UAC elevation that just works",
   "main": "lib/elevator.js",
   "homepage": "https://github.com/antarasi/elevator/releases",
@@ -35,8 +35,5 @@
     "jsdoc-to-markdown": "^1.1.1",
     "jshint-stylish": "^2.0.1",
     "mochainon": "^1.0.0"
-  },
-  "dependencies": {
-    "debug": "^2.6.3"
   }
 }
